Add page content

--- a/index.html
+++ b/index.html
@@ -7,5 +7,38 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+    	<h1>Na wyspach Bergamutach</h1>
+	<p>
+	Na wyspach Bergamutach<br>
+	Podobno jest kot w butach,<br>
+	</p>
+	<p>
+	Widziano także osła,<br>
+	Którego mrówka niosła,<br>
+	</p>
+	<p>
+	Jest kura samograjka<br>
+	Znosząca złote jajka,<br>
+	</p>
+	<p>
+	Na dębach rosną jabłka<br>
+	W gronostajowych czapkach,<br>
+	</p>
+	<p>
+	Jest i wieloryb stary,<br>
+	Co nosi okulary,<br>
+	</p>
+	<p>
+	Uczone są łososie<br>
+	W pomidorowym sosie<br>
+	</p>
+	<p>
+	I tresowane szczury<br>
+	Na szczycie szklanej góry,<br>
+	</p>
+	<p>
+	Jest słoń z trąbami dwiema<br>
+	I tylko… wysp tych nie ma.<br>
+	</p>
     </body>
 </html>    
