--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
     	<h1>Na wyspach Bergamutach</h1>
+	<h2>Jan Brzechwa</h2>
 	<p>
 	Na wyspach Bergamutach<br>
 	Podobno jest kot w butach,<br>
