Add footer to index.html

--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 	Jest słoń z trąbami dwiema<br>
 	I tylko… wysp tych nie ma.<br>
 	</p>
+	    <footer>M. Kaczmarczyk-Koza</footer>
     </body>
 </html>    
