--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Poem</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -41,6 +41,6 @@
 	Jest słoń z trąbami dwiema<br>
 	I tylko… wysp tych nie ma.<br>
 	</p>
-	    <footer>M. Kaczmarczyk-Koza</footer>
+	<footer>M. Kaczmarczyk-Koza</footer>
     </body>
 </html>    
