Add img to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
     	<h1>Na wyspach Bergamutach</h1>
 	<h2>Jan Brzechwa</h2>
+	<img src="https://i.postimg.cc/MpgbJPjz/bergamuty-1.jpg" alt="">
 	<p>
 	Na wyspach Bergamutach<br>
 	Podobno jest kot w butach,<br>
